# frontend

./: .gitignore  README.md  pyproject.toml  views.py
src/: api_client.py  main.py
