[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pre-commit>=4.2.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "ruff>=0.11.13",
    "streamlit>=1.45.1",
]
